--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,6 +31,7 @@ dependencies:
   flutter:
     sdk: flutter
   brasil_fields: ^1.14.0
+  flutter_sliding_up_panel: ^2.1.1
 
 
   # The following adds the Cupertino Icons font to your application.
